--- a/pom.xml
+++ b/pom.xml
@@ -18,13 +18,6 @@
     </repositories>
 
     <dependencies>
-        <!-- DEPENDÊNCIA: ENVIO DE SMS VIA TWILIO -->
-        <dependency>
-            <groupId>com.twilio.sdk</groupId>
-            <artifactId>twilio</artifactId>
-            <version>8.31.1</version>
-        </dependency>
-
         <!-- DEPENDÊNCIA: ENVIO DE EMAIL -->
         <dependency>
             <groupId>com.sun.mail</groupId>
@@ -46,5 +39,19 @@
         </dependency>
 
     </dependencies>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version>
+                <configuration>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
